--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,8 @@
                             "src/styles/vendors.scss",
                             "src/@fuse/styles/main.scss",
                             "src/styles/styles.scss",
-                            "src/styles/tailwind.scss"
+                            "src/styles/tailwind.scss",
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css"
                         ],
                         "scripts": []
                     },
@@ -110,6 +111,8 @@
                         "browserTarget": "fuse:build"
                     }
                 },
+
+
                 "test": {
                     "builder": "@angular-devkit/build-angular:karma",
                     "options": {
