--- a/package.json
+++ b/package.json
@@ -19,25 +19,32 @@
         "@angular/compiler": "16.0.3",
         "@angular/core": "16.0.3",
         "@angular/forms": "16.0.3",
+        "@angular/localize": "^16.2.8",
         "@angular/material": "16.0.2",
         "@angular/material-luxon-adapter": "16.0.2",
         "@angular/platform-browser": "16.0.3",
         "@angular/platform-browser-dynamic": "16.0.3",
         "@angular/router": "16.0.3",
+        "@ng-bootstrap/ng-bootstrap": "^15.1.1",
         "@ng-select/ng-select": "^11.1.1",
         "@ngneat/transloco": "4.2.7",
+        "@popperjs/core": "^2.11.8",
         "apexcharts": "3.40.0",
+        "bootstrap": "^5.3.2",
         "crypto-js": "3.3.0",
         "highlight.js": "11.8.0",
+        "jsprintmanager": "^5.0.3",
         "lodash-es": "4.17.21",
         "lodash.clonedeep": "^4.5.0",
         "lodash.filter": "^4.6.0",
         "lodash.foreach": "^4.5.0",
         "lodash.groupby": "^4.6.0",
+        "lodash.orderby": "^4.6.0",
         "lodash.sumby": "^4.6.0",
         "luxon": "3.3.0",
         "moment": "^2.29.4",
         "ng-apexcharts": "1.7.6",
+        "ng2-file-upload": "^5.0.0",
         "ngx-quill": "22.0.0",
         "pdfmake": "^0.1.66",
         "perfect-scrollbar": "1.5.5",
