--- a/angular.json
+++ b/angular.json
@@ -56,7 +56,8 @@
                             "src/@fuse/styles/main.scss",
                             "src/styles/styles.scss",
                             "src/styles/tailwind.scss",
-                            "node_modules/bootstrap/dist/css/bootstrap.min.css"
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "./node_modules/angular-calendar/css/angular-calendar.css"
                         ],
                         "scripts": []
                     },
