--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
         "@ng-select/ng-select": "^11.1.1",
         "@ngneat/transloco": "4.2.7",
         "@popperjs/core": "^2.11.8",
+        "angular-calendar": "^0.31.0",
         "apexcharts": "3.40.0",
         "bootstrap": "^5.3.2",
         "crypto-js": "3.3.0",
+        "date-fns": "2.29.3",
+        "flatpickr": "4.6.13",
         "highlight.js": "11.8.0",
         "jsprintmanager": "^5.0.3",
         "lodash-es": "4.17.21",
